# slient-beam

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
client/: client_cache.py  client_config.enc  client_config.py  client_main.py  client_network.py  client_screenshot.py  client_service.py  create_config.py  version_file.txt
host/: decrypt.py  server.py  server_prod.py  server_v2.py
