[project]
name = "silent-beam"
version = "0.1.0"
description = ""
authors = [
    {name = "adrian"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mss (>=10.0.0,<11.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
